# iu9-coursework

./: .gitignore  CMakeLists.txt  Makefile  README.org  biblio.bib  go.mod  go.sum  presentation.tex  report.tex  requirements.txt  shell.nix
benchmarks/: CMakeLists.txt  main.cpp  out.json  out.txt  pipe.hpp  plot.py
cmd/logger/: logger.go
include/stewkk/ipc/: errors.hpp  fdstreambuf.hpp  fifo.hpp  mmap.hpp  pipe.hpp  posix_queue.hpp  socket_pair.hpp  subprocess.hpp  syscalls.hpp  systemv_queue.hpp
listings/: fr.ts  maxen.ts  rep.ts  responses.ts  vector.ts  vertex.ts  vertexen.ts
pkg/inotify/: event.go  inotify.go  inotify_test.go  tmp  watch.go
report/: .gitignore  Makefile  biblio.bib  class_diagram.tex  class_diagram.txt  presentation.tex  report.tex
report/listings/: attr.ts  draw.ts  fdbufin_definition.cpp  fdbufout_definition.cpp  fw.ts  graph.ts  kk.ts  nextpos.ts  pipe.cpp  pipe.hpp  plot.py  subprocess_declaration.hpp  user.ts  vector.ts  vector_ops.ts  vkapi.ts
src/stewkk/ipc/: CMakeLists.txt  errors.cpp  errors.hpp  errors_test.cpp  fdstreambuf.cpp  fdstreambuf_test.cpp  fifo.cpp  fifo_test.cpp  mmap.cpp  mmap_test.cpp  pipe.cpp  pipe_test.cpp  posix_queue.cpp  posix_queue_test.cpp  socket_pair.cpp  socket_test.cpp  subprocess.cpp  subprocess_test.cpp  syscalls.cpp  systemv_queue_test.cpp
test/: CMakeLists.txt
